css/styles.css
/* Vars */
:root {
  --primary-brand-color: #4D5AE5;
  --pressed-state-color: #404BBF;
  --dark-color: #2E2F42;
  --success-color: #31D0AA;
  --text-color: #434455;
  --subtle-text-color: #8E8F99;
  --accent-color: #E7E9FC;
  --light-color: #F4F4FD;
  --white-color: #FFFFFF;
}

/* Reset Styles */
h1,
h2,
h3,
h4,
p {
  margin-top: 0;
  margin-bottom: 0;
}

ul {
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 0;
}

img {
  display: block;
}

address {
  font-style: normal;
}

.link {
  text-decoration: none;
}

.list {
  list-style: none;
}

/* Body */
body {
font-family: 'Roboto', sans-serif;
font-size: 16px;
line-height: 1.50;
letter-spacing: 0.02em;

color: var(--text-color);
background-color: var(--white-color);
}

/* Components */
.container {
  width: 1158px;
  margin-left: auto;
  margin-right: auto;
  padding-left: 15px;
  padding-right: 15px;
}

.title {
  margin-bottom: 72px;
  font-size: 36px;
  line-height: 1.11;
  text-align: center;
  text-transform: capitalize;
  color: var(--dark-color);
}

.subtitle {
  margin-bottom: 8px;
  font-weight: 500;
  font-size: 20px;
  line-height: 1.20;
  color: var(--dark-color);
}

.text {
  color: var(--text-color);
}

.btn {
  font-weight: 500;
  font-size: 16px;
  line-height: 1.50;
  letter-spacing: 0.04em;
  cursor: pointer;
  border-radius: 4px;
}

.hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;

  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.section {
  padding-top: 120px;
  padding-bottom: 120px;
}

/* Logo */
.logo {
  font-family: 'Raleway', sans-serif;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.33;
  letter-spacing: 0.03em;
  text-transform: uppercase;
}

.logo-accent {
  color: var(--primary-brand-color);
}

/* Header */
.page-header {
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
  border-bottom: 1px solid var(--accent-color);
}

.page-header-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.header-logo,
.menu-link,
.address-link {
  display: block;
  padding-top: 24px;
  padding-bottom: 24px;
}

.site-nav {
  display: flex;
  align-items: center;
  gap: 76px;
}

.header-logo {
  color: var(--dark-color);
}

/* Navigation Menu */
.menu {
  display: flex;
  align-items: center;
  gap: 40px;
}

.menu-link {
  font-weight: 500;
  color: var(--dark-color);
}

.menu-link:hover,
.menu-link:focus,
.current {
  color: var(--pressed-state-color);
}

/* Contacts */
.address-list {
  display: flex;
  align-items: center;
  gap: 40px;
}

.address-link {
  color: var(--text-color);
}

.address-link:hover,
.address-link:focus {
  color: var(--pressed-state-color);
}

/* Hero */
.hero-section {
  padding: 188px 0;
  text-align: center;

  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
  url(../images/background/hero-bcg.jpg);
  background-size: cover;
  background-position: center;
  background-color: var(--dark-color);
}

.hero-title {
  margin-bottom: 48px;
  text-align: center;
  color: var(--white-color);
  font-size: 56px;
  line-height: 1.07;
}

.modal-btn {
  min-width: 169px;
  padding: 16px 32px;
  color: var(--white-color);
  background-color: var(--primary-brand-color);
  border-color: transparent;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
}

.modal-btn:hover,
.modal-btn:focus {
  background-color: var(--pressed-state-color);
}  

/* Features */
.features-section {
  padding-top: 120px;
}

.features-list {
  display: flex;
  gap: 24px;
}

.features-list-item {
  flex-basis: calc((100% - 72px) / 4);
}

.features-thumb {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 24px;
  padding-bottom: 24px;
  margin-bottom: 8px;
  background: var(--light-color);
  border-radius: 4px;
  }

.features-icon {
  width: 64px;
  height: 64px;
}

/* Products */
.products-list {
  display: flex;
  flex-wrap: wrap;
  gap: 24px;
}

.products-list-item {
  flex-basis: calc((100% - 48px) / 3);
} 

/* Team */
.team-section {
  padding-top: 120px;
  padding-bottom: 110px;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
  background-color: var(--light-color);
}

.team-list-title,
.team-list-text {
  text-align: center;
}

.team-list {
  display: flex;
  flex-wrap: wrap;
  gap: 24px;
}

.team-list-item {
  flex-basis: calc((100% - 72px) / 4);
  background-color: var(--white-color);
  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
  border-radius: 0px 0px 4px 4px;
}

.team-card-content {
  padding: 32px 16px;
}

.team-list-text {
  margin-bottom: 8px;
}

/* Social list icons */
.soc-list {
  display: flex;
  justify-content: center;
  gap: 24px;
}

.soc-list-link {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background-color: var(--primary-brand-color);
}

.soc-list-icon {
  width: 16px;
  height: 16px;
  fill: var(--light-color);
}

.soc-list-link:hover,
.soc-list-link:focus {
  border: 1px solid rgba(0, 0, 0, 0.1);
  background-color: var(--accent-color);
}

.soc-list-link:hover .soc-list-icon,
.soc-list-link:focus .soc-list-icon {
  fill: var(--dark-color);
}

/* Customers */
.customers-section {
  padding-top: 130px;
  padding-bottom: 120px;
}

.customers-list {
  display: flex;
  justify-content: center;
  gap: 24px;
}

.customers-list-link {
  display: flex;
    justify-content: center;
    align-items: center;
    width: 168px;
    height: 88px;
    border: 1px solid var(--subtle-text-color);
    border-radius: 4px;
}

.customers-list-icon {
  width: 104px;
  height: 56px;
  fill: var(--subtle-text-color);
}

.customers-list-link:hover,
.customers-list-link:focus {
  border: 1px solid var(--pressed-state-color);
}

.customers-list-link:hover .customers-list-icon,
.customers-list-link:focus .customers-list-icon {
  fill: var(--pressed-state-color);
}

/* Portfolio */
.portfolio-page-main {
  padding-top: 96px;
  padding-bottom: 120px;
}

/* Portfolio filters */
.filters-list {
  display: flex;
  justify-content: center;
  padding-bottom: 72px;
  gap: 24px;
}

.filter-btn {
  min-width: 69px;
  padding: 12px 24px;
  color: var(--primary-brand-color);
  background-color: var(--light-color);
  border: 1px solid #E7E9FC;
}

.filter-btn:hover,
.filter-btn:focus {
  color: var(--white-color);
  background-color: var(--pressed-state-color);
  border-color: transparent;
  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
}

/* Portfolio List */
.portfolio-list {
  display: flex;
  flex-wrap: wrap;
  column-gap: 24px;
  row-gap: 48px;
}

.portfolio-list-item {
  flex-basis: calc((100% - 48px) / 3);
}

.portfolio-card-content {
  padding: 32px 16px;
  border: 1px solid var(--accent-color);
  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
}

.portfolio-list-item:hover .portfolio-card-content,
.portfolio-list-item:focus .portfolio-card-content {
  border: 0.5px solid var(--light-color);
  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
}

/* Footer */
.page-footer {
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
  padding: 100px 0;
  background-color: var(--dark-color);
}

.footer-container {
  display: flex;
  gap: 120px;
}

.footer-logo {
  color: var(--light-color);
}

.footer-text {
  margin-top: 16px;
  width: 264px;
  color: var(--accent-color);
}

.footer-soc-title {
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 1.50;
  color: var(--white-color);
}

.footer-soc-list {
  display: flex;
  justify-content: center;
  gap: 16px;
}

.footer-soc-list-link {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background-color: rgba(255, 255, 255, 0.1);
}

.footer-soc-list-icon {
  width: 24px;
  height: 24px;
  fill: var(--light-color);
}

.footer-soc-list-link:hover,
.footer-soc-list-link:focus {
  background-color: var(--success-color);
}

